feat: 临时删除获取位置借口

--- a/app.json
+++ b/app.json
@@ -146,8 +146,7 @@
     }
   },
   "requiredPrivateInfos": [
-    "chooseAddress",
-    "getLocation"
+    "chooseAddress"
   ],
   "sitemapLocation": "sitemap.json",
   "lazyCodeLoading": "requiredComponents"
