feat: 临时删除获取位置接口

--- a/app.json
+++ b/app.json
@@ -146,7 +146,8 @@
     }
   },
   "requiredPrivateInfos": [
-    "chooseAddress"
+    "chooseAddress",
+    "getLocation"
   ],
   "sitemapLocation": "sitemap.json",
   "lazyCodeLoading": "requiredComponents"
