--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
       "home/media/note/index",
       "home/media/video/index",
       "home/media/author-center/index",
+      "home/classification/hot-spot/index",
       "mall/scenic/index",
       "mall/scenic/subpages/scenic-detail/index",
       "mall/scenic/subpages/scenic-detail/subpages/more-info/index",
