--- a/app.json
+++ b/app.json
@@ -18,6 +18,7 @@
       "home/media/video/index",
       "home/media/author-center/index",
       "home/classification/hot-scenic/index",
+      "home/classification/lake-trip/index",
       "mall/scenic/index",
       "mall/scenic/subpages/scenic-detail/index",
       "mall/scenic/subpages/scenic-detail/subpages/more-info/index",
