--- a/app.json
+++ b/app.json
@@ -19,6 +19,7 @@
       "home/media/author-center/index",
       "home/trip-type/hot-scenic/index",
       "home/trip-type/lake-trip/index",
+      "home/trip-type/lake-cycle/index",
       "mall/scenic/index",
       "mall/scenic/subpages/scenic-detail/index",
       "mall/scenic/subpages/scenic-detail/subpages/more-info/index",
