feat: 夜游千岛湖

--- a/app.json
+++ b/app.json
@@ -20,6 +20,7 @@
       "home/trip-type/hot-scenic/index",
       "home/trip-type/lake-trip/index",
       "home/trip-type/lake-cycle/index",
+      "home/trip-type/night-trip/index",
       "mall/scenic/index",
       "mall/scenic/subpages/scenic-detail/index",
       "mall/scenic/subpages/scenic-detail/subpages/more-info/index",
