--- a/app.json
+++ b/app.json
@@ -21,6 +21,7 @@
       "home/trip-type/lake-trip/index",
       "home/trip-type/lake-cycle/index",
       "home/trip-type/night-trip/index",
+      "home/trip-type/star-trip/index",
       "mall/scenic/index",
       "mall/scenic/subpages/scenic-detail/index",
       "mall/scenic/subpages/scenic-detail/subpages/more-info/index",
