--- a/app.json
+++ b/app.json
@@ -31,6 +31,7 @@
       "mall/scenic/subpages/scenic-detail/subpages/qa-list/subpages/qa-detail/index",
       "mall/scenic/subpages/scenic-detail/subpages/nearby-hotels/index",
       "mall/scenic/subpages/scenic-detail/subpages/nearby-scenics/index",
+      "mall/scenic/subpages/shop/index",
       "mall/scenic/subpages/order-check/index",
       "mall/hotel/index",
       "mall/hotel/subpages/hotel-detail/index",
