--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
       "common/pay/index",
       "common/cropper/index",
       "common/search/index",
+      "common/ai-chat/index",
       "home/media/note/index",
       "home/media/video/index",
       "home/media/author-center/index",
