--- a/app.json
+++ b/app.json
@@ -60,6 +60,10 @@
       "mall/goods/subpages/cart/index",
       "mall/goods/subpages/order-check/index",
       "mall/invite-merchant/index",
+      "mall/invite-merchant/subpages/mine-task/index",
+      "mall/invite-merchant/subpages/task-detail/index",
+      "mall/invite-merchant/subpages/reward-decord/index",
+      "mall/invite-merchant/subpages/guide/index",
       "gift/index",
       "notice/chat/index",
       "mine/setting/index",
