--- a/app.json
+++ b/app.json
@@ -111,7 +111,8 @@
       "mine/setting/subpages/invite-merchant/index",
       "mine/setting/subpages/invite-merchant/subpages/mine-task/index",
       "mine/setting/subpages/invite-merchant/subpages/task-detail/index",
-      "mine/setting/subpages/merchant-settle/index"
+      "mine/setting/subpages/merchant-settle/index",
+      "mine/setting/subpages/feedback/index"
     ]
   }],
   "tabBar": {
