--- a/app.json
+++ b/app.json
@@ -112,7 +112,8 @@
       "mine/setting/subpages/invite-merchant/subpages/mine-task/index",
       "mine/setting/subpages/invite-merchant/subpages/task-detail/index",
       "mine/setting/subpages/merchant-settle/index",
-      "mine/setting/subpages/feedback/index"
+      "mine/setting/subpages/feedback/index",
+      "mine/setting/subpages/about-us/index"
     ]
   }],
   "tabBar": {
