feat: 家乡代言人

--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
       "common/cropper/index",
       "common/search/index",
       "common/ai-chat/index",
+      "common/promoter/index",
       "home/media/note/index",
       "home/media/video/index",
       "home/media/author-center/index",
