--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
       "common/pay/index",
       "common/cropper/index",
       "common/search/index",
+      "common/shipping/index",
       "common/ai-chat/index",
       "common/promoter/index",
       "common/promoter/subpages/complaint/index",
