feat: 团圆家乡年

--- a/app.json
+++ b/app.json
@@ -19,6 +19,7 @@
       "common/promoter/index",
       "common/promoter/subpages/complaint/index",
       "common/promoter/subpages/evaluation/index",
+      "common/new-year/index",
       "home/media/note/index",
       "home/media/video/index",
       "home/media/author-center/index",
