--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,7 +3,19 @@
     "compileHotReLoad": true,
     "urlCheck": false
   },
-  "condition": {},
+  "condition": {
+    "miniprogram": {
+      "list": [
+        {
+          "name": "pages/subpages/mine/setting/subpages/merchant-settle/index",
+          "pathName": "pages/subpages/mine/setting/subpages/merchant-settle/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        }
+      ]
+    }
+  },
   "projectname": "tiddler-trip",
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "libVersion": "3.1.5"
