--- a/app.json
+++ b/app.json
@@ -1,127 +1,129 @@
 {
-  "pages":[
+  "pages": [
     "pages/tab-bar-pages/home/index",
     "pages/tab-bar-pages/mall/index",
     "pages/tab-bar-pages/promoter/index",
     "pages/tab-bar-pages/notice/index",
     "pages/tab-bar-pages/mine/index"
   ],
-  "subPackages": [{
-    "root": "pages/subpages/",
-    "pages": [
-      "common/register/index",
-      "common/webview/index",
-      "common/pay/index",
-      "common/cropper/index",
-      "common/search/index",
-      "common/shipping/index",
-      "common/ai-chat/index",
-      "common/promoter/index",
-      "common/promoter/subpages/complaint/index",
-      "common/promoter/subpages/evaluation/index",
-      "common/new-year/index",
-      "home/media/note/index",
-      "home/media/video/index",
-      "home/media/author-center/index",
-      "home/theme/hot-scenic/index",
-      "home/theme/lake-trip/index",
-      "home/theme/lake-cycle/index",
-      "home/theme/night-trip/index",
-      "home/theme/star-trip/index",
-      "home/theme/homestay/index",
-      "mall/scenic/index",
-      "mall/scenic/subpages/scenic-detail/index",
-      "mall/scenic/subpages/scenic-detail/subpages/more-info/index",
-      "mall/scenic/subpages/scenic-detail/subpages/evaluation-list/index",
-      "mall/scenic/subpages/scenic-detail/subpages/qa-list/index",
-      "mall/scenic/subpages/scenic-detail/subpages/qa-list/subpages/qa-detail/index",
-      "mall/scenic/subpages/scenic-detail/subpages/nearby-hotels/index",
-      "mall/scenic/subpages/scenic-detail/subpages/nearby-scenics/index",
-      "mall/scenic/subpages/shop/index",
-      "mall/scenic/subpages/order-check/index",
-      "mall/hotel/index",
-      "mall/hotel/subpages/hotel-detail/index",
-      "mall/hotel/subpages/hotel-detail/subpages/more-image/index",
-      "mall/hotel/subpages/hotel-detail/subpages/more-info/index",
-      "mall/hotel/subpages/hotel-detail/subpages/evaluation-list/index",
-      "mall/hotel/subpages/hotel-detail/subpages/qa-list/index",
-      "mall/hotel/subpages/hotel-detail/subpages/qa-list/subpages/qa-detail/index",
-      "mall/hotel/subpages/hotel-detail/subpages/nearby-hotels/index",
-      "mall/hotel/subpages/hotel-detail/subpages/nearby-scenics/index",
-      "mall/hotel/subpages/order-check/index",
-      "mall/catering/index",
-      "mall/catering/subpages/restaurant-detail/index",
-      "mall/catering/subpages/restaurant-detail/subpages/more-image/index",
-      "mall/catering/subpages/restaurant-detail/subpages/more-info/index",
-      "mall/catering/subpages/restaurant-detail/subpages/evaluation-list/index",
-      "mall/catering/subpages/restaurant-detail/subpages/qa-list/index",
-      "mall/catering/subpages/restaurant-detail/subpages/qa-list/subpages/qa-detail/index",
-      "mall/catering/subpages/meal-ticket-order-check/index",
-      "mall/catering/subpages/set-meal-order-check/index",
-      "mall/goods/index",
-      "mall/goods/subpages/goods-detail/index",
-      "mall/goods/subpages/goods-detail/subpages/evaluation-list/index",
-      "mall/goods/subpages/shop/index",
-      "mall/goods/subpages/cart/index",
-      "mall/goods/subpages/order-check/index",
-      "gift/index",
-      "notice/chat/index",
-      "mine/address/index",
-      "mine/address/subpages/add/index",
-      "mine/address/subpages/edit/index",
-      "mine/order/index",
-      "mine/order/subpages/order-search/index",
-      "mine/order/subpages/goods-order/order-detail/index",
-      "mine/order/subpages/goods-order/evaluation/index",
-      "mine/order/subpages/goods-order/refund/index",
-      "mine/order/subpages/scenic-order/order-detail/index",
-      "mine/order/subpages/scenic-order/evaluation/index",
-      "mine/order/subpages/hotel-order/order-detail/index",
-      "mine/order/subpages/hotel-order/evaluation/index",
-      "mine/order/subpages/meal-ticket-order/order-detail/index",
-      "mine/order/subpages/meal-ticket-order/evaluation/index",
-      "mine/order/subpages/set-meal-order/order-detail/index",
-      "mine/order/subpages/set-meal-order/evaluation/index",
-      "mine/merchant/index",
-      "mine/merchant/subpages/income-detail/index",
-      "mine/merchant/subpages/scenic-order/index",
-      "mine/merchant/subpages/scenic-order/subpages/order-detail/index",
-      "mine/merchant/subpages/hotel-order/index",
-      "mine/merchant/subpages/hotel-order/subpages/order-detail/index",
-      "mine/merchant/subpages/meal-ticket-order/index",
-      "mine/merchant/subpages/meal-ticket-order/subpages/order-detail/index",
-      "mine/merchant/subpages/set-meal-order/index",
-      "mine/merchant/subpages/set-meal-order/subpages/order-detail/index",
-      "mine/merchant/subpages/goods-order/index",
-      "mine/merchant/subpages/goods-order/subpages/order-detail/index",
-      "mine/merchant/subpages/goods-refund/index",
-      "mine/merchant/subpages/goods-refund/subpages/refund-detail/index",
-      "mine/merchant/subpages/order-search/index",
-      "mine/create-video/index",
-      "mine/create-note/index",
-      "mine/relative-product/index",
-      "mine/fan-follow-list/index",
-      "mine/promoter/index",
-      "mine/promoter/subpages/account/index",
-      "mine/promoter/subpages/customer/index",
-      "mine/withdraw/index",
-      "mine/withdraw/subpages/withdraw-result/index",
-      "mine/withdraw/subpages/bind-bank/index",
-      "mine/balance/index",
-      "mine/coupon/index",
-      "mine/history/index",
-      "mine/setting/index",
-      "mine/setting/subpages/user-info-setting/index",
-      "mine/setting/subpages/password-setting/index",
-      "mine/setting/subpages/merchant-settle/index",
-      "mine/setting/subpages/invite-merchant/index",
-      "mine/setting/subpages/invite-merchant/subpages/mine-task/index",
-      "mine/setting/subpages/invite-merchant/subpages/task-detail/index",
-      "mine/setting/subpages/feedback/index",
-      "mine/setting/subpages/about-us/index",
-      "mine/setting/subpages/license/index"
-    ]
-  }],
+  "subPackages": [
+    {
+      "root": "pages/subpages/",
+      "pages": [
+        "common/register/index",
+        "common/webview/index",
+        "common/pay/index",
+        "common/cropper/index",
+        "common/search/index",
+        "common/shipping/index",
+        "common/ai-chat/index",
+        "common/promoter/index",
+        "common/promoter/subpages/complaint/index",
+        "common/promoter/subpages/evaluation/index",
+        "common/new-year/index",
+        "home/media/note/index",
+        "home/media/video/index",
+        "home/media/author-center/index",
+        "home/theme/hot-scenic/index",
+        "home/theme/lake-trip/index",
+        "home/theme/lake-cycle/index",
+        "home/theme/night-trip/index",
+        "home/theme/star-trip/index",
+        "home/theme/homestay/index",
+        "mall/scenic/index",
+        "mall/scenic/subpages/scenic-detail/index",
+        "mall/scenic/subpages/scenic-detail/subpages/more-info/index",
+        "mall/scenic/subpages/scenic-detail/subpages/evaluation-list/index",
+        "mall/scenic/subpages/scenic-detail/subpages/qa-list/index",
+        "mall/scenic/subpages/scenic-detail/subpages/qa-list/subpages/qa-detail/index",
+        "mall/scenic/subpages/scenic-detail/subpages/nearby-hotels/index",
+        "mall/scenic/subpages/scenic-detail/subpages/nearby-scenics/index",
+        "mall/scenic/subpages/shop/index",
+        "mall/scenic/subpages/order-check/index",
+        "mall/hotel/index",
+        "mall/hotel/subpages/hotel-detail/index",
+        "mall/hotel/subpages/hotel-detail/subpages/more-image/index",
+        "mall/hotel/subpages/hotel-detail/subpages/more-info/index",
+        "mall/hotel/subpages/hotel-detail/subpages/evaluation-list/index",
+        "mall/hotel/subpages/hotel-detail/subpages/qa-list/index",
+        "mall/hotel/subpages/hotel-detail/subpages/qa-list/subpages/qa-detail/index",
+        "mall/hotel/subpages/hotel-detail/subpages/nearby-hotels/index",
+        "mall/hotel/subpages/hotel-detail/subpages/nearby-scenics/index",
+        "mall/hotel/subpages/order-check/index",
+        "mall/catering/index",
+        "mall/catering/subpages/restaurant-detail/index",
+        "mall/catering/subpages/restaurant-detail/subpages/more-image/index",
+        "mall/catering/subpages/restaurant-detail/subpages/more-info/index",
+        "mall/catering/subpages/restaurant-detail/subpages/evaluation-list/index",
+        "mall/catering/subpages/restaurant-detail/subpages/qa-list/index",
+        "mall/catering/subpages/restaurant-detail/subpages/qa-list/subpages/qa-detail/index",
+        "mall/catering/subpages/meal-ticket-order-check/index",
+        "mall/catering/subpages/set-meal-order-check/index",
+        "mall/goods/index",
+        "mall/goods/subpages/goods-detail/index",
+        "mall/goods/subpages/goods-detail/subpages/evaluation-list/index",
+        "mall/goods/subpages/shop/index",
+        "mall/goods/subpages/cart/index",
+        "mall/goods/subpages/order-check/index",
+        "gift/index",
+        "notice/chat/index",
+        "mine/address/index",
+        "mine/address/subpages/add/index",
+        "mine/address/subpages/edit/index",
+        "mine/order/index",
+        "mine/order/subpages/order-search/index",
+        "mine/order/subpages/goods-order/order-detail/index",
+        "mine/order/subpages/goods-order/evaluation/index",
+        "mine/order/subpages/goods-order/refund/index",
+        "mine/order/subpages/scenic-order/order-detail/index",
+        "mine/order/subpages/scenic-order/evaluation/index",
+        "mine/order/subpages/hotel-order/order-detail/index",
+        "mine/order/subpages/hotel-order/evaluation/index",
+        "mine/order/subpages/meal-ticket-order/order-detail/index",
+        "mine/order/subpages/meal-ticket-order/evaluation/index",
+        "mine/order/subpages/set-meal-order/order-detail/index",
+        "mine/order/subpages/set-meal-order/evaluation/index",
+        "mine/merchant/index",
+        "mine/merchant/subpages/income-detail/index",
+        "mine/merchant/subpages/scenic-order/index",
+        "mine/merchant/subpages/scenic-order/subpages/order-detail/index",
+        "mine/merchant/subpages/hotel-order/index",
+        "mine/merchant/subpages/hotel-order/subpages/order-detail/index",
+        "mine/merchant/subpages/meal-ticket-order/index",
+        "mine/merchant/subpages/meal-ticket-order/subpages/order-detail/index",
+        "mine/merchant/subpages/set-meal-order/index",
+        "mine/merchant/subpages/set-meal-order/subpages/order-detail/index",
+        "mine/merchant/subpages/goods-order/index",
+        "mine/merchant/subpages/goods-order/subpages/order-detail/index",
+        "mine/merchant/subpages/goods-refund/index",
+        "mine/merchant/subpages/goods-refund/subpages/refund-detail/index",
+        "mine/merchant/subpages/order-search/index",
+        "mine/create-video/index",
+        "mine/create-note/index",
+        "mine/relative-product/index",
+        "mine/fan-follow-list/index",
+        "mine/promoter/index",
+        "mine/promoter/subpages/account/index",
+        "mine/promoter/subpages/customer/index",
+        "mine/withdraw/index",
+        "mine/withdraw/subpages/withdraw-result/index",
+        "mine/withdraw/subpages/bind-bank/index",
+        "mine/balance/index",
+        "mine/coupon/index",
+        "mine/history/index",
+        "mine/setting/index",
+        "mine/setting/subpages/user-info-setting/index",
+        "mine/setting/subpages/password-setting/index",
+        "mine/setting/subpages/merchant-settle/index",
+        "mine/setting/subpages/invite-merchant/index",
+        "mine/setting/subpages/invite-merchant/subpages/mine-task/index",
+        "mine/setting/subpages/invite-merchant/subpages/task-detail/index",
+        "mine/setting/subpages/feedback/index",
+        "mine/setting/subpages/about-us/index",
+        "mine/setting/subpages/license/index"
+      ]
+    }
+  ],
   "tabBar": {
     "custom": true,
     "list": [
@@ -131,7 +133,7 @@
       {
         "pagePath": "pages/tab-bar-pages/mall/index"
       },
-       {
+      {
         "pagePath": "pages/tab-bar-pages/promoter/index"
       },
       {
@@ -157,6 +159,10 @@
     "logisticsPlugin": {
       "version": "2.3.0",
       "provider": "wx9ad912bf20548d92"
+    },
+    "materialPlugin": {
+      "version": "1.0.12",
+      "provider": "wx4d2deeab3aed6e5a"
     }
   },
   "requiredPrivateInfos": [
