feat: 千岛礼物新年礼包

--- a/app.json
+++ b/app.json
@@ -21,6 +21,7 @@
         "common/promoter/subpages/complaint/index",
         "common/promoter/subpages/evaluation/index",
         "common/new-year/index",
+        "common/new-year-gift/index",
         "home/media/note/index",
         "home/media/video/index",
         "home/media/author-center/index",
